[package]
name = "gumdrop"
version = "0.8.1"
authors = ["Murarth <murarth@gmail.com>"]
edition = "2018"

description = "Option parser with custom derive support"

documentation = "https://docs.rs/gumdrop/"
homepage = "https://github.com/murarth/gumdrop"
repository = "https://github.com/murarth/gumdrop"

keywords = ["args", "command-line", "flag", "getopts", "option"]
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = []
default_expr = ["gumdrop_derive/default_expr"]

[dependencies]
gumdrop_derive = { version = "0.8.1", path = "gumdrop_derive" }

[dev-dependencies]
assert_matches = "1.1"

[workspace]
