[package]
name = "gumdrop_derive"
version = "0.8.1"
authors = ["Murarth <murarth@gmail.com>"]
edition = "2018"

description = "custom derive support for gumdrop"

documentation = "https://docs.rs/gumdrop_derive/"
homepage = "https://github.com/murarth/gumdrop"
repository = "https://github.com/murarth/gumdrop"

keywords = ["args", "command-line", "flag", "getopts", "option"]
license = "MIT/Apache-2.0"

[lib]
name = "gumdrop_derive"
proc-macro = true

[features]
default = []
default_expr = ["syn/full"]

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"
